--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -208,27 +208,7 @@ jobs:
         shell: bash
         run: |
           export TEAMSFX_INSIDER_PREVIEW=true
-          # replace with this eventually: xvfb-run -a npx lerna run test:unit
-          cd packages/fx-core
-          xvfb-run -a npx nyc mocha \
-            "tests/core/**/*.test.ts" \
-            "tests/plugins/resource/appstudio/**/*.test.ts" \
-            "tests/plugins/resource/bot/**/*.test.ts" \
-            "tests/plugins/resource/function/**/*.test.ts" \
-            "tests/plugins/resource/sql/**/*.test.ts" \
-            "tests/plugins/resource/aad/**/*.test.ts" \
-            "tests/plugins/resource/simpleauth/**/*.test.ts" \
-            "tests/plugins/resource/frontend/**/*.test.ts" \
-            "tests/plugins/solution/*.test.ts"
-          cd -
-
-          cd packages/cli
-          xvfb-run -a npm run test:unit
-          cd -
-
-          cd packages/vscode-extension
-          xvfb-run -a npm run test:unit
-          cd -
+          xvfb-run -a npx lerna run test:unit
 
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
