--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -67,7 +67,7 @@ jobs:
       #  uses: actions/upload-artifact@v2
       #  with:
       #    name: defaultUserData
-      #    path: .fx/states/staging.userdata
+      #    path: .fx/states/${{env.TEAMSFX_ENV_NAME}}.userdata
       
       - name: Generate userdata
         env:
@@ -93,7 +93,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: appPackage
-          path: appPackage/appPackage.staging.zip
+          path: appPackage/appPackage.${env.TEAMSFX_ENV_NAME}.zip
 
       - name: Publish Teams App
         uses: OfficeDev/teamsfx-cli-action@v1
