--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -4,9 +4,53 @@ on:
   schedule:
     - cron: "0 4,7,10 * * *"
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
+  check-e2e-tests:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+
+      - name: Install parser cli
+        run: |
+          npm install --global conventional-commits-parser
+
+      - name: Check PR title
+        id: check_title
+        run: |
+          type=`echo "${{ github.event.pull_request.title }}" |  conventional-commits-parser | jq -r '.[].type'`
+          if [[ " ${array[*]} " =~ " ${type} " ]]; then
+            echo "::set-output included=true"
+          else
+            echo "::set-output included=false"
+          fi
+
+      - name: Search comment
+        if: ${{ steps.check_title.outputs.included == "true" }}
+        uses: peter-evans/find-comment@v1
+        id: comments
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body-includes: "E2E TEST:"
+
+      - name: Check if test is included in comments
+        if: ${{ steps.check_title.outputs.included == "true" }}
+        run: |
+          if [ -z "${{ steps.comments.outputs.comment-id }}" ]; then
+            echo "E2E TEST undefined."
+            exit 1
+          fi
+
   e2e-tests:
+    if: ${{ github.event_name != 'pull_request' }}
     name: run e2e test on (self-hosted linux 8cpu node14)
     env:
       AZURE_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
