--- a/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
@@ -12,10 +12,10 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     #environment: test_environment
     env:
-{{#hosting_type_is_spfx}}
+{{#hosting_type_contains_spfx}}
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
-{{/hosting_type_is_spfx}}
+{{/hosting_type_contains_spfx}}
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: {{env_name}}
 
@@ -42,7 +42,7 @@ jobs:
       - name: Run Unit Test
         run: {{ut_script}}
 
-{{#hosting_type_is_azure}}
+{{#hosting_type_contains_azure}}
       # Login Azure by service principal.
       # Service principal for Azure is used, and to create Azure service principal for use, refer to https://github.com/OfficeDev/TeamsFx/tree/dev/docs/cicd_insider#how-to-create-azure-service-principals-for-use.
       - name: Login Azure by service principal 
@@ -54,7 +54,7 @@ jobs:
           password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
           tenant: ${{secrets.AZURE_TENANT_ID}}
       
-{{/hosting_type_is_azure}}
+{{/hosting_type_contains_azure}}
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
