--- a/packages/fx-core/templates/plugins/resource/cicd/github/provision.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/provision.yml
@@ -10,10 +10,10 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     #environment: test_environment
     env:
-{{#hosting_type_is_spfx}}
+{{#hosting_type_contains_spfx}}
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
-{{/hosting_type_is_spfx}}
+{{/hosting_type_contains_spfx}}
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: {{env_name}}
 
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-{{#hosting_type_is_azure}}
+{{#hosting_type_contains_azure}}
       # Login Azure by service principal.
       # Service principal for Azure is used, and to create Azure service principal for use, refer to https://github.com/OfficeDev/TeamsFx/tree/dev/docs/cicd_insider#how-to-create-azure-service-principals-for-use.
       - name: Login Azure by service principal 
@@ -38,16 +38,16 @@ jobs:
           password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
           tenant: ${{secrets.AZURE_TENANT_ID}}
 
-{{/hosting_type_is_azure}}
+{{/hosting_type_contains_azure}}
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit necessary files under .fx into the repository.
       - name: Provision hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: provision
-{{#hosting_type_is_azure}}
+{{#hosting_type_contains_azure}}
           subscription: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-{{/hosting_type_is_azure}}
+{{/hosting_type_contains_azure}}
           env: ${{env.TEAMSFX_ENV_NAME}}
 
       - name: Commit provision configs if necessary
