--- a/.github/workflows/env-checker-ci-pr.yml
+++ b/.github/workflows/env-checker-ci-pr.yml
@@ -88,7 +88,7 @@ jobs:
           retry_wait_seconds: 3
           on_retry_command: git clean -fXd .
           command: |
-            npx run setup
+            npm run setup
 
       ## In headless Linux CI machines xvfb is required to run VS Code
       ## https://code.visualstudio.com/api/working-with-extensions/continuous-integration#github-actions
