--- a/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
@@ -40,8 +40,8 @@ jobs:
       # Run unit test.
       # Currently, no opinionated solution for unit test provided during scaffolding, so,
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
-      - name: Run Unit Test
-        run: <%ut_script%>
+      # - name: Run Unit Test
+      #   run: npm run test
 
 <%#hosting_type_contains_azure%>
       # Login Azure by service principal.
