--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,6 +57,7 @@
     "@types/lodash": "^4.14.170",
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
+    "@types/mochawesome": "^6.2.1",
     "@types/node": "^14.14.21",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
@@ -79,8 +80,8 @@
     "jsonschema": "^1.4.0",
     "lint-staged": "^10.5.4",
     "mocha": "^9.1.1",
-    "mochawesome": "^7.0.1",
     "mocha-junit-reporter": "^2.0.2",
+    "mochawesome": "^7.0.1",
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
