--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@fluentui/react-northstar": "^0.54.0",
     "@microsoft/teams-js": "^1.9.0",
-    "@microsoft/teamsfx": "^0.4.0",
+    "@microsoft/teamsfx": "^0.5.0",
     "axios": "^0.21.1",
     "msteams-react-base-component": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
+    "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
+    "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
