--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -922,6 +922,17 @@
             "id": "teamsToolkitBuildApp",
             "title": "Build your first Teams app",
             "description": "Choose [Teams app capabilities](https://aka.ms/teamsfx-capabilities-overview) and build your first Teams app.\nYou can create it from the scratch or explore our samples to help you quickly get started with the real-world examples and code structures.\n[Create a new Teams app](command:fx-extension.getNewProjectPath?%5B%22Webview%22%5D)\n[View samples](command:toSide:fx-extension.openSamples?%5B%22Webview%22%5D)",
+            "when": "!fx-extension.isNotSupportAutoOpenAPI",
+            "media": {
+              "svg": "media/step_create.svg",
+              "altText": "Build your first Teams app"
+            }
+          },
+          {
+            "id": "teamsToolkitBuildAppOldApi",
+            "title": "Build your first Teams app",
+            "description": "Choose [Teams app capabilities](https://aka.ms/teamsfx-capabilities-overview) and build your first Teams app.\nYou can create it from the scratch or explore our samples to help you quickly get started with the real-world examples and code structures.\n[Create a new Teams app](command:fx-extension.create?%5B%22SideBar%22%5D)\n[View samples](command:toSide:fx-extension.openSamples?%5B%22Webview%22%5D)",
+            "when": "fx-extension.isNotSupportAutoOpenAPI",
             "media": {
               "svg": "media/step_create.svg",
               "altText": "Build your first Teams app"
