--- a/templates/blazor-base/csharp/default/Properties/launchSettings.json
+++ b/templates/blazor-base/csharp/default/Properties/launchSettings.json
@@ -1,18 +1,10 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:2544",
-      "sslPort": 44302
-    }
-  },
   "profiles": {
-    "ProjectStart": {
+    "{{BlazorAppServer}}": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl":"https://teams.microsoft.com/l/app/TEAMSAPPID?installAppPackage=true&webjoin=true&appTenantId=TENANTID&login_hint=USERNAME",
+      "launchUrl": "https://teams.microsoft.com/l/app/%TEAMSAPPID%?installAppPackage=true&webjoin=true&appTenantId=%TENANTID%&login_hint=%USERNAME%",
       "applicationUrl": "https://localhost:44302;http://localhost:2544",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
