--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -5,7 +5,10 @@
     "types": "build/index.d.ts",
     "license": "MIT",
     "dependencies": {
-        "fs-extra": "^9.1.0"
+        "fs-extra": "^9.1.0",
+        "ajv": "^8.5.0",
+        "ajv-draft-04": "^1.0.0",
+        "axios": "^0.21.2"
     },
     "devDependencies": {
         "rimraf": "^3.0.0",
