--- a/templates/tab/js/default/package.json
+++ b/templates/tab/js/default/package.json
@@ -11,7 +11,10 @@
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^4.0.3"
+        "react-scripts": "^4.0.3",
+        "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
