--- a/templates/tab/js/default/package.json
+++ b/templates/tab/js/default/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
         "@microsoft/teams-js": "^1.9.0",
+        "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teamsfx": "^0.5.1",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^3.1.0",
