--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -6,6 +6,7 @@
         "@fluentui/react-northstar": "^0.54.0",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.5.1",
+        "@microsoft/microsoft-graph-client": "^3.0.1",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^3.1.0",
         "react": "^16.14.0",
